# personal-website

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
nginx/: default.conf
